<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="header"
            type="com.runnect.runnect.domain.entity.DiscoverMultiViewItem.RecommendHeader" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_discover_course"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="34dp"
            app:dividerColor="@color/G4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_discover_recommend_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_discover_course">

            <TextView
                android:id="@+id/tv_discover_recommend_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="34dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@{header.title}"
                android:textColor="@color/G1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/discover_recommend_header_title" />

            <TextView
                android:id="@+id/tv_discover_recommend_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@{header.subtitle}"
                android:textColor="@color/G2"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_discover_recommend_title"
                app:layout_constraintTop_toBottomOf="@id/tv_discover_recommend_title"
                tools:text="@string/discover_recommend_header_subtitle" />

            <TextView
                android:id="@+id/tv_discover_recommend_sort_by_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendard_semibold"
                android:paddingHorizontal="7dp"
                android:paddingVertical="14dp"
                android:text="@string/discover_recommend_sort_by_date"
                android:textColor="@color/M1"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_discover_recommend_sort_by_scrap"
                app:layout_constraintEnd_toStartOf="@id/tv_discover_recommend_sort_by_scrap"
                app:layout_constraintTop_toTopOf="@id/tv_discover_recommend_sort_by_scrap" />

            <TextView
                android:id="@+id/tv_discover_recommend_sort_by_scrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/pretendard_regular"
                android:paddingHorizontal="1dp"
                android:paddingVertical="14dp"
                android:text="@string/discover_recommend_sort_by_scrap"
                android:textColor="@color/G2"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>